<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marny</string>
    <string name="menu_info">Informations</string>
    
    <string name="info">Cette application a été créé par Nicolas SABOUREAU et
         Martin CESBRON dans le cadre d\'un projet Android à l\'IIA.</string>
         
    
    <string name="start">Commencer</string>
    <string name="rss">Flux RSS</string>
    
    
    <string name="home_welcome">Bienvenue, aventurier. Choisis ce que tu veux 
        faire avant d\'entrer dans le château.</string>
        
    <string name="home_shop">Faire un tour dans la boutique</string>
    <string name="home_go">Partir à l\'assaut du château</string>
    <string name="home_info_hero">Informations sur votre héro</string>
    
    <string name="health">Points de vie : </string>
    <string name="attack">Points d\'attaque : </string>
    <string name="armor">Points d\'armure : </string>
    <string name="health">Points de vie : </string>
    <string name="gold">Golds : </string>
    <string name="helmet">Casque : </string>
    <string name="shield">Bouclier : </string>
    <string name="weapon">Arme : </string>
    <string name="potion">Potions : </string>
    <string name="coin">coin</string>
    
    <string name="empty">vide</string>
    <string name="bg">background</string>
    <string name="sprite">sprite</string>
    
    <string name="btn_back">Hop ! Hop ! Hop mon petit ! On ne revient jamais 
        sur ses pas quand on est courageux !</string>
	<string name="heroKO_title">Pas de chance &#8230;</string>
	<string name="heroKO_msg">ARGGHH !! Tu as été vaincu !</string>
	<string name="heroKO_valid">Retourner devant le château</string>
    
    <string name="monster">AAAHH !!! Un monstre vient d\'apparaitre !</string>
    <string name="img_monster">Image du monstre</string>
    <string name="goldroom">Une salle au trésor ! Prends le maximum !</string>
    
    <string name="restroom">Quelle chance ! Une salle de repos. Ta vie a été 
        remise à son maximum !</string>
    
    <string name="shoproom">Bienvenue chez le marchand, fais ton choix.</string>
    
    <string name="next">Aller à la salle suivante</string>
    
    <string name="attack_btn">Attaquer !</string>
    <string name="monster_ko">Le monstre a été vaincu</string>
    
    <string name="buy">Acheter</string>
    <string name="confirm">Es-tu sûr ?</string>
    <string name="msg_buy_begin">Acheter cet item pour </string>
    <string name="msg_buy_end"> golds ?</string>
    <string name="msg_error">Malheuresement,  
        tu n\'as pas assez de golds</string>
    <string name="msg_congrat">Félicitation jeune aventurier !
         Tu viens d\'acquérir un nouvel item !</string>
    <string name="succes_potion">Tu viens
         d\'acheter une potion</string>
    <string name="buy_potion">La potion regénére 50HP pour 50 Golds. 
        Combien en veux-tu ?</string>
    <string name="already_buy">Déjà acheté</string>
    <string name="equip">Équipé</string>
    
    <string name="gold_text_info"> Golds</string>
	<string name="info_monstre"> Informations du monstrer</string>
	
	<string name="shakeroom">La porte a l\'air coincée &#8230; 
	    Essaies de secouer ton appareil !</string>
	    
	<string name="door_open">Bravo ! La porte s\'est ouverte !</string>
	
	<string name="compassroom">Mince ! Un labyrinthe. Utilises ta bousole pour 
	    te sortir de là !</string>
	<string name="exitfound">Bravo ! Tu as trouvé la sortie !</string>
</resources>
