<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/home_label_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/home_welcome"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <Button
        android:id="@+id/home_btn_shop"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_label_welcome"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/home_shop" />
    
    <Button
        android:id="@+id/home_btn_go"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/home_btn_shop"
        android:layout_alignBottom="@+id/home_btn_shop"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/home_go" />

</RelativeLayout>
