<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/img_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/bg"
        android:src="@drawable/sprite_blade_1" />

    <TextView
        android:id="@+id/health_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/img_weapon"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/attack_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/health_weapon"
        android:layout_below="@+id/health_weapon"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/armor_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attack_weapon"
        android:layout_toRightOf="@+id/img_weapon"
        android:text="@string/empty" />

    <Button
        android:id="@+id/btn_acheter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/armor_weapon"
        android:layout_alignParentRight="true"
        android:text="@string/buy" />
    
</RelativeLayout>
